<resources>
    <string name="app_name">BodyMassIndexApp</string>
    <string name="insert_weight">Insert weight:</string>
    <string name="insert_height">Insert height:</string>
    <string name="calculate">Calculate</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="PleaseInsert">Please insert</string>
    <string name="UnderWeight">Underweight</string>
    <string name="Normal">Normal</string>
    <string name="OverWeight">Overweight</string>
    <string name="reset">Reset</string>
</resources>